--- a/src/views/tela-inicio/tela-inicio.css
+++ b/src/views/tela-inicio/tela-inicio.css
@@ -1,14 +1,16 @@
 body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center; 
-  align-items: center;
-
   font-family: 'Segoe UI', sans-serif;
 
   background-color: #313131;
 
   margin: 0;
+}
+
+.conteudo {
+  display: flex;
+  flex-direction: column;
+
+  padding: 0 5%;
 }
 
 h1 {
@@ -25,7 +27,7 @@ h1 {
 
 .container-formulario {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   gap: 5px;
 
   padding: 1%;
@@ -77,8 +79,7 @@ h1 {
   align-items: center;
   gap: 10px;
 
-  max-width: 350px;
-  height: 450px;
+  height: 250px;
 
   background-color: #e1e1e1;
   color: #313131;
@@ -91,6 +92,11 @@ h1 {
 .notificacao {
   position: absolute;
   bottom: 0;
+  left: 0;
+  right: 0;
+
+  margin-left: auto;
+  margin-right: auto;
 
   text-align: center;
   font-size: 20px;
@@ -99,17 +105,18 @@ h1 {
   background-color: #DA471B;
   border-radius: 10px;
 
-  min-width: 300px;
+  width: 300px;
 
   padding: 10px 20px;
-  margin-bottom: 1%;
-  margin-left: auto;
-  margin-left: right;
-
-  transition: outline 1s ease-in-out;
 }
 
 .notificacao:hover {
   opacity: 0.9;
   cursor: pointer;
+}
+
+.grid-pokemons {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  gap: 10px;
 }
